space in itinerary section, sunflower z-indexed and positioned on itinerary, rsvp, registrys now look like buttons, registrys simple font, fixed placement, font of going to montana header

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Oranienbaum" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Italianno|Pinyon+Script" rel="stylesheet">
+
+
 </head>
   <body>
     <nav class="navbar navbar-default">
@@ -39,6 +41,7 @@
             <li class="active"><a href="https://McCayBrownWedding.rsvpify.com" target="_blank">RSVP</a></li>
             <li><a href="https://www.amazon.com/wedding/jessica-mccay-nereus-brown-arlee-june-2018/registry/PAP93ASIJOKN" target="_blank">Amazon Registry</a></li>
             <li><a href="https://www.zola.com/registry/jessicaandnereus" target="_blank">Zola Registry</a></li>
+            <li><a href="#goingToMontanaHeader">THINGS TO DO</a></li>
           </ul>
         </div>
       </div>
@@ -57,13 +60,13 @@
 <div class="parent2">
 
   <div class="child2">
-    <div id="details"><span class="love">We found <span id="love">Love</span></span>... We want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence in Arlee, MT.
-      We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
+    <div id="details"><span class="love">We found <span id="love">Love</span></span>... We want to celebrate it with you! The wedding ceremony and reception will be at the McCay residence, 25615 Vanderburg Ln
+        Arlee, Montana 59821. We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
 
       <table align="center"style="width:60%" >
         <tbody>
 
-          <th style="text-align: center">Wedding </th>
+          <th style="text-align: center" padding-top="10vw">Wedding </th>
           <th>Itinerary</th>
 
           <tr>
@@ -107,6 +110,7 @@
   </div>
 </div>
 
+
 <div class="parent">
   <div class="child rsvpChild">
     <a  href="https://www.zola.com/search/wedding-registry" target="_blank"> <a href="https://www.zola.com/registry/jessicaandnereus"><h1>ZOLA</h1><h6>WEDDING REGISTRY</h6></a>
@@ -122,7 +126,7 @@
 </div>
 
 
-<!-- <hr> -->
+<hr>
 <br>
 <br>
 
