altered message to guests

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="parent2">
 
   <div class="child2">
-    <div id="details"><span class="love">We found <span id="love">Love</span></span><br> We want to celebrate it with you! <br>The wedding ceremony and reception will be at the McCay residence, <br> 25615 Vanderburg Ln <br>
+    <div id="details"><span class="love">We found <span id="love">Love</span></span><br> We would love to celebrate it with you! <br>The wedding ceremony and reception will be at the McCay residence, <br> 25615 Vanderburg Ln <br>
         Arlee, Montana 59821. <br> We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
       </div>
 
