--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </div>
 
 <div >
-  <p id="weddingGifts">We met in Southern California. At the begginning of this year, we packed up and moved across the country to Detroit, Michigan. Life has presented us with opportunity. We are grateful. We are now slowly piecing together what it takes to make this house a home.<br> Please send any wedding gifts to<br> 3162 Chestnut Street,<br> Dearborn, Michigan 48124.<br> <span class="love">Love,<br> Jessica and Nereus</span></p>
+  <p id="weddingGifts">We met in Southern California. At the beginning of this year, we packed up and moved across the country to Detroit, Michigan. Life has presented us with opportunity. We are grateful. We are now slowly piecing together what it takes to make this house a home.<br> Please send any wedding gifts to<br> 3162 Chestnut Street,<br> Dearborn, Michigan 48124.<br> <span class="love">Love,<br> Jessica and Nereus</span></p>
 </div>
 
 <div class="parent">
