--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <div class="parent2">
 
   <div class="child2">
-    <div id="details"><span class="love">We found <span id="love">Love</span></span><br> We would love to celebrate it with you! <br>The wedding ceremony and reception will be at the McCay residence, <br> 25615 Vanderburg Ln <br>
-        Arlee, Montana 59821. <br> We love to dance so remember to bring along some comfortable shoes! This is an outdoor ceremony and reception.
+    <div id="details"><span class="love married">We found <span id="love">Love</span></span><br> We would love to celebrate it with you! <br>The wedding ceremony and reception will be at the McCay residence, <br> 25615 Vanderburg Ln <br>
+        Arlee, Montana 59821. <br>This is an outdoor ceremony and reception, dress is semi-formal.<br> We hope you will dance with us so don't forget to bring along some comfortable shoes!
       </div>
 
         <img id="sunflower" src="http://www.ecstudents.net/14springb2f/skim/images/sunflower.png" width="20%" alt="">
